submission instructions added

--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -4,7 +4,7 @@ title: "MP 2.0: Responsiveness, Visual Design and AngularJS"
 due: Mar 11, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-### Due Date - March 11, 2015, 11.59PM CST
+### Due Date - *March 12*, 2015, 11.59PM CST
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2015) and [this repository](https://github.com/uiuc-web-programming/mp2_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
@@ -130,5 +130,15 @@ This prevents the function parameter names from being changed.
 
 
 ###Submission Details
-Coming soon.
+You can find the MP2 Submission [here](http://uiucwp.com/mp2/submit)
+ 
+There are 3 parts for this MP submission. 
+(VERY IMPORTANT) Add *uiuc-web-programming* as a collaborator on your repository (instructions for [GitHub](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/) and [Bitbucket](https://confluence.atlassian.com/display/BITBUCKET/Add+Users,+Set+Permissions,+and+Review+Account+Plans))
+Submit the [step 1](http://uiucwp.com/mp2/submit) form, wait for an email from the build system, and verify that all parts of your MP (parts A, B, and C) look correct. You can resubmit this form if you want to make changes to your MP.
+Complete and submit this *REQUIRED* [supplemental form](https://docs.google.com/forms/d/1L-PzXT2Ibqs-1lmIlyyX6ERsff0RBT9zB6wUaFInJPw/viewform). You only need to submit this form once. So, if you decide to rebuild your website in order to fix any broken resources, you should not resubmit the supplemental form.
+ 
+For Step 1, it is crucial that you make sure that your site looks the exact same way you want your website to be graded. You should pay particular attention to Rule 5 from the MP2 spec](http://uiuc-web-programming.github.io/sp2015/MP-2/) for all your CSS, JavaScript, and asset references.
+ 
+If you run into any issues using the submission and build system, please email [sethupa2@illinois.edu](sethupa2@illinois.edu). 
 
+The MP2 Deadline has been extended to Thursday March 12th @ 11:59pm.
