build log instruction added

--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -134,7 +134,7 @@ You can find the MP2 Submission [here](http://uiucwp.com/mp2/submit)
  
 There are 3 parts for this MP submission. 
 (VERY IMPORTANT) Add *uiuc-web-programming* as a collaborator on your repository (instructions for [GitHub](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/) and [Bitbucket](https://confluence.atlassian.com/display/BITBUCKET/Add+Users,+Set+Permissions,+and+Review+Account+Plans))
-Submit the [step 1](http://uiucwp.com/mp2/submit) form, wait for an email from the build system, and verify that all parts of your MP (parts A, B, and C) look correct. You can resubmit this form if you want to make changes to your MP.
+Submit the [step 1](http://uiucwp.com/mp2/submit) form, wait for an email from the build system, and verify that all parts of your MP (parts A, B, and C) look correct. Your build log can be found at your http://uiucwp.com:3000/ABCDEF/output.txt. Make sure you change ABCDEF to your own unique ID. You can resubmit this form if you want to make changes to your MP.
 Complete and submit this *REQUIRED* [supplemental form](https://docs.google.com/forms/d/1L-PzXT2Ibqs-1lmIlyyX6ERsff0RBT9zB6wUaFInJPw/viewform). You only need to submit this form once. So, if you decide to rebuild your website in order to fix any broken resources, you should not resubmit the supplemental form.
  
 For Step 1, it is crucial that you make sure that your site looks the exact same way you want your website to be graded. You should pay particular attention to Rule 5 from the MP2 spec](http://uiuc-web-programming.github.io/sp2015/MP-2/) for all your CSS, JavaScript, and asset references.
