--- a/_posts/2015-2-23-MP-2.md
+++ b/_posts/2015-2-23-MP-2.md
@@ -54,7 +54,7 @@ Your app should have the following features:
 
 You can see a demo of a sample app in [this video](https://www.youtube.com/watch?v=_xZYYViPvig).
 
-You recommend you to use the following project structure:
+We recommend you to use the following project structure:
 
 1. The main HTML file for this app should be `public/imdb250.html`. It should contain the code that is common to all views in the app. For example, you can include all CSS and JavaScript files here.  
 + Your app has three main views (one for the list, one for the gallery and the other for displaying the details of a particuar movie). These should be implemented using three different [Angular routing and partial templates](https://docs.angularjs.org/tutorial/step_07). You can implement them in the three files in `public/partials`
