added another validation

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -89,9 +89,10 @@ Requirements:
 + You should implement the query string functionality by using the methods provided by Mongoose (as opposed to querying Mongoose for all the results and then doing the filtering/sorting/skipping etc. in your Node/Express application code).
 + Have server side validation for:
 	+ Users cannot be created (or updated) without a name or email
+	+ Multiple users with the same email cannot exist
 	+ Tasks cannot be created (or updated) without a name or a deadline,
-+ If a user is deleted, all pending tasks that the user had should be updated to have assignedUserName changed to "unassigned" 
-+ If a task is deleted, it should be deleted from the "pendingTasks" array of the user it was assigned to.
++ If a user is deleted, all pending tasks that the user had should be updated to have `assignedUserName` changed to "unassigned" 
++ If a task is deleted, it should be deleted from the `pendingTasks` array of the user it was assigned to.
 + In terms of code, your routes can be defined in the `server.js` file. Your Mongoose models should however all be under the `models` directory.
 
 
