added error response format and OPTIONS action on some endpoints

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -10,7 +10,7 @@ due: April 6, 11.59PM CST
 
 ###Overview
 
-In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. Both the parts can be developed independently. When you are developing the API you can test it using [Postman](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en). When you are developing your front-end, you can test it using **our API endpoints that will be released soon**.
+In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. Both the parts can be developed independently. When you are developing the API you can test it using [Postman](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en). When you are developing your front-end, you can test it using our reference API implementation at http://www.uiucwp.com/api.
 
 ###Part A: Creating a RESTful API
 
@@ -21,13 +21,15 @@ Goal: Implement an API with the following end-points (they would be preceded by 
 |----------|---------|-----------------------------------------------------|
 | users    | GET     | Respond with a List of users                        |
 |          | POST    | Create a new user. Respond with details of new user |
-| users/:id | GET     | Respond with details of specified user or 404 error |
-|          | PUT  | Replace entire user with supplied user or 404 error |
+|          | OPTIONS | See the last tip at the bottom of the page          |
+| users/:id| GET     | Respond with details of specified user or 404 error |
+|          | PUT     | Replace entire user with supplied user or 404 error |
 |          | DELETE  | Delete specified user or 404 error                  |
 | tasks    | GET     | Respond with a List of tasks                        |
 |          | POST    | Create a new task. Respond with details of new task |
-| tasks/:id | GET     | Respond with details of specified task or 404 error |
-|          | PUT  | Replace entire task with supplied task or 404 error |
+|          | OPTIONS | See the last tip at the bottom of the page          |
+| tasks/:id| GET    | Respond with details of specified task or 404 error  |
+|          | PUT     | Replace entire task with supplied task or 404 error |
 |          | DELETE  | Delete specified user or 404 error                  |
 
 In addition, your implementation should support the following JSON encoded query string parameters for the GET requests to the `users` and `tasks` endpoints:
@@ -72,7 +74,7 @@ We assume that each task can be assigned only to one user.
 Requirements:
 
 1. Your database should be on [mongolab](http://www.mongolab.com). It should contain at least 50 users and 200 tasks (You can use your favourite scripting language to insert data through the REST API you are building).
-+ All responses from your API should be a JSON object with two fields. The first field should be named `message` and should contain a human readable String that indicates success or failure (with reason of failure if possible) of the request. The second field should be named `data` and should contain the actual JSON response object. For example, here is a valid response:
++ Responses from your API should be a JSON object with two fields. The first field should be named `message` and should contain a human readable String. The second field should be named `data` and should contain the actual JSON response object. For example, here is a valid response:
 
 ```javascript
 {
@@ -85,12 +87,13 @@ Requirements:
 }
 ```
 
-+ Your API should respond with appropriate [HTTP status codes](http://www.restapitutorial.com/httpstatuscodes.html). You should at least handle the following codes: 200, 201, 404, 500.
++ Error responses from your API should also also be a JSON object with a `message` and `data` fields. Messages have to sensible and human readable so that on the client side it can be displayed to the user. Also, it should be independent of the server side technology that you are using. For example, your API should not return an error message directly from Mongoose to the client. For examples of error messages, take a look at the API reference implementation that we have provided.
++ Your API should respond with appropriate [HTTP status codes](http://www.restapitutorial.com/httpstatuscodes.html) for both successful and error responses. You should at least have the following codes: 200 (success), 201 (created), 404 (not found), 500 (server error).
 + You should implement the query string functionality by using the methods provided by Mongoose (as opposed to querying Mongoose for all the results and then doing the filtering/sorting/skipping etc. in your Node/Express application code).
 + Have server side validation for:
-	+ Users cannot be created (or updated) without a name or email
-	+ Multiple users with the same email cannot exist
-	+ Tasks cannot be created (or updated) without a name or a deadline,
+	+ Users cannot be created (or updated) without a name or email. All other fields that the user did not specify should be set to reasonable values.
+	+ Multiple users with the same email cannot exist.
+	+ Tasks cannot be created (or updated) without a name or a deadline. All other fields that the user did not specify should be set to reasonable values.
 + If a user is deleted, all pending tasks that the user had should be updated to have `assignedUserName` changed to "unassigned" 
 + If a task is deleted, it should be deleted from the `pendingTasks` array of the user it was assigned to.
 + In terms of code, your routes can be defined in the `server.js` file. Your Mongoose models should however all be under the `models` directory.
@@ -155,7 +158,20 @@ Requirements:
 </li>
 <li> Data (say when editing a user's name) should change on the front-end only after the data is successfully changed on the server through the API. If the API call results in an error, the front end should display the error message (from the "message" field of the response). </li>
 <li> Your app should use partials and routes to implement all the different views listed above. </li>
-<li> You app should interact with the API only through custom service(s) that you write. You would have to inject these services into your controller. </li>
+<li> You app should interact with the API only through custom service(s) that you write. You would have to inject these services into your controllers. </li>
+<li>You should have client side validation to ensure that
+	<ol>
+		<li>
+			Users cannot be created (or updated) without a name or email. Also check for the validity of the email provided. These fields should be marked with a red * to indicate that they are required and an error message should pop up when users don't comply.
+		</li>
+		<li>
+			Tasks cannot be created (or updated) without a name or a deadline. These fields should be marked with a red * to indicate that they are required and an error message should pop up when users don't comply.
+		</li>
+	</ol>
+</li>
+<li>
+	All your date entry fields should use a graphical date picker.
+</li>
 </ol>
 
 **A video demo of a sample app will be posted soon.**
@@ -166,6 +182,7 @@ We recommend you to use the following project structure:
 + Your app has several views (as listed above). These should be implemented using different [Angular partial templates](https://docs.angularjs.org/tutorial/step_07) in `public/partials`
 + Your Angular code should go in `js/app.js` except for the conrollers and services. The controllers should be in `js/controllers.js` and the services should be in `js/services.js`. 
 + For styling, you can use the scss files in `scss` folder like you did in MP 1 or write a css file or borrow css/scss from elsewhere (such as from Foundation).
++ Your are free to use different Foundation components (such as [Abide Validation](http://foundation.zurb.com/docs/components/abide.html)) or other libraries to augment your apps visual design and functionality. However, the core of your app should be written in AngularJS according to the specific details provided above.
 
 
 Also, here is a list of angular things that you might find useful
@@ -208,18 +225,22 @@ This part will be graded mainly on the functionality that you are able to implem
 
 This part will be graded mainly on your ability to have the API running and the correct use of the API in your front-end.
 
-
-
 ###Tips
 * Some Mongoose parameters need a Javascript object instead of a JSON string. To do the conversion you can use something like:
 
 ```javascript
   var myObj = eval("("+myString+")");
 ```
-+ Look at [this stack overflow question](http://stackoverflow.com/questions/13937318/convert-angular-http-get-function-to-a-service) to understand how to start a service
-+ [Helpful beginner tutorial](http://adrianmejia.com/blog/2014/09/28/angularjs-tutorial-for-beginners-with-nodejs-expressjs-and-mongodb/)
++ Look at [this stack overflow question](http://stackoverflow.com/questions/13937318/convert-angular-http-get-function-to-a-service) to understand how to write a service
++ Here is a [helpful beginner tutorial] for some of the technologies used in this MP.(http://adrianmejia.com/blog/2014/09/28/angularjs-tutorial-for-beginners-with-nodejs-expressjs-and-mongodb/)
++ Apparently, Angular always makes a [OPTION request before a POST request](http://stackoverflow.com/questions/24656488/angularjs-how-to-disable-option-request) and so your API should respond to a OPTIONS request at the endpoints where POST is implemented. You should be able to do something as simple as the following (as we are setting the response headers when we are handling the CORS stuff):
 
-
+```javascript
+someRoute.options(function(req, res){
+      res.writeHead(200);
+      res.end();
+});
+```
 
 
 ###Submission Details
