added error response format and OPTIONS action on some endpoints

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -10,7 +10,7 @@ due: April 6, 11.59PM CST
 
 ###Overview
 
-In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. Both the parts can be developed independently. When you are developing the API you can test it using [Postman](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en). When you are developing your front-end, you can test it using our reference API implementation at http://www.uiucwp.com/api.
+In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. Both the parts can be developed independently. When you are developing the API you can test it using [Postman](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en). When you are developing your front-end, you can test it using our reference API implementation at http://www.uiucwp.com:4000/api.
 
 ###Part A: Creating a RESTful API
 
