changed the filter query string parameter to select

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -1,12 +1,15 @@
 ---
 layout: default
-title: "MP 3.0: Creating and consuming a RESTful API"
+title: "MP 3.1: Creating and consuming a RESTful API"
 due: April 6, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
 ### Due Date - *April 6*, 2015, 11.59PM CST
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2015), [this repository](https://github.com/uiuc-web-programming/mp3_client_starter) and [this repository](https://github.com/uiuc-web-programming/mp3_server_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
+
+<span style="color: red"> Change Log: </span> 
+1. `filter` query string parameter has been renamed to `select` in part A.
 
 ###Overview
 
@@ -38,7 +41,7 @@ In addition, your implementation should support the following JSON encoded query
 |----------|----------------------------------------------------------------------------------------------|
 | where    | filter results based on JSON query                                                           |
 | sort     | specify the order in which to sort each specified field  (1- ascending; -1 - descending)     |
-| filter   | specify the set of fields to include or exclude in each document  (1 - include; 0 - exclude) |
+| select   | specify the set of fields to include or exclude in each document  (1 - include; 0 - exclude) |
 | skip     | specify the number of results to skip in the result set; useful for pagination               |
 | limit    | specify the number of results to return (default should be 100)                              |
 
@@ -50,7 +53,7 @@ Here are some example queries and what they would return:
 | `http://www.uiucwp.com:4000/api/tasks?where={"completed": true}`                          | Returns a list of completed tasks                       |
 | `http://www.uiucwp.com:4000/api/tasks?where={"_id": {"$in": ["235263523","3872138723"]}}` | Returns a set of tasks                                  |
 | `http://www.uiucwp.com:4000/api/users?sort={"name": 1}`                                  | Returns a list of users sorted by name                  |
-| `http://www.uiucwp.com:4000/api/users?filter={"_id": 0}`                                  | Returns a list of users without the _id field           |
+| `http://www.uiucwp.com:4000/api/users?select={"_id": 0}`                                  | Returns a list of users without the _id field           |
 | `http://www.uiucwp.com:4000/api/users?skip=60&limit=20`                                   | Returns user number 61 to 80                            |
 
 Your User schema should have the following three fields:
