added clarification regarding multiple params in a query

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -57,6 +57,12 @@ Here are some example queries and what they would return:
 | `http://www.uiucwp.com:4000/api/users?select={"_id": 0}`                                  | Returns a list of users without the _id field           |
 | `http://www.uiucwp.com:4000/api/users?skip=60&limit=20`                                   | Returns user number 61 to 80                            |
 
+**Your API should be able to handle any combination of those parameters in a single request**. For example, the following is a valid GET request:
+
+```javascript
+http://www.uiucwp.com:4000/api/users?sort={"name": 1}&skip=60&limit=20
+```
+
 Your User schema should have the following three fields:
 
 1. "name" - String
