changed spec for deletions

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -104,8 +104,8 @@ Requirements:
 	+ Users cannot be created (or updated) without a name or email. All other fields that the user did not specify should be set to reasonable values.
 	+ Multiple users with the same email cannot exist.
 	+ Tasks cannot be created (or updated) without a name or a deadline. All other fields that the user did not specify should be set to reasonable values.
-+ <del> If a user is deleted, all pending tasks that the user had should be updated to have `assignedUserName` changed to "unassigned" </del> You should handle this in the front end (part B).
-+ <del> If a task is deleted, it should be deleted from the `pendingTasks` array of the user it was assigned to </del> You should handle this in the front end (part B).
++ <del> If a user is deleted, all pending tasks that the user had should be updated to have `assignedUserName` changed to "unassigned" </del> **You should handle this in the front end (part B)**.
++ <del> If a task is deleted, it should be deleted from the `pendingTasks` array of the user it was assigned to </del> **You should handle this in the front end (part B)**.
 + In terms of code, your routes can be defined in the `server.js` file. Your Mongoose models should however all be under the `models` directory. 
 
 
