--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "MP 3.1: Creating and consuming a RESTful API"
+title: "MP 3.2: Creating and consuming a RESTful API"
 due: April 6, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
@@ -11,6 +11,7 @@ due: April 6, 11.59PM CST
 <span style="color: red"> Change Log: </span> 
 
 1. `filter` query string parameter has been renamed to `select` in part A.
+2. New field `assignedUser` added to Task schema.
 
 ###Overview
 
@@ -76,6 +77,7 @@ Your Task schema should have the following five fields:
 + "description" - String
 + "deadline" - Date
 + "completed" - Boolean
++ **"assignedUser"** - String - The _id field of the user this task is assigned to - default ""
 + "assignedUserName" - String - The name field of the user this task is assigned to - default "unassigned"
 + "dateCreated" - Date - should be set automatically by server to present date 
 
@@ -83,7 +85,7 @@ We assume that each task can be assigned only to one user.
 
 Requirements:
 
-1. Your database should be on [mongolab](http://www.mongolab.com). It should contain at least 50 users and 200 tasks (You can use your favourite scripting language to insert data through the REST API you are building).
+1. Your database should be on [mongolab](http://www.mongolab.com). It should contain at least <del>50</del> 20 users and <del>200</del> 100 tasks (about half of which should be completed) ( <del> You can use your favourite scripting language to insert data through the REST API you are building </del>. **We will provide you a script to do this after spring break.**).
 + Responses from your API should be a JSON object with two fields. The first field should be named `message` and should contain a human readable String. The second field should be named `data` and should contain the actual JSON response object. For example, here is a valid response:
 
 ```javascript
@@ -127,7 +129,7 @@ Requirements:
 	    <li>
 	    User List:
 	    <ul>
-	    	<li>List user names (20 at a time). The API should be called only to return the needed information about each user (user name and _id). Clicking on a user should take us to the User Details view.</li>
+	    	<li>List **all** user names <del>(20 at a time)</del>. The API should be called only to return the needed information about each user (user name and _id). Clicking on a user should take us to the User Details view.</li>
 	    	<li>Have next and previous buttons. </li>
 	    	<li>Have a button to create a new user that takes you to Add User view. </li>
 	    	<li>Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons. Any change to the sorting inputs should result in an API call that gets the new data (we do not want you to sort or filter data in the front-end).</li>
@@ -136,7 +138,7 @@ Requirements:
 	    <li> 
 	    Task List: 
 	    <ul>
-	    	<li>List task names (20 at a time) with the name of the assigned user next to it. The API should be called only to return the needed information about each task (name, _id, assignedUserName). Clicking on a task should take us to the Task Details view.</li>
+	    	<li>List task names (use **pagination** to display only 20 at a time) with the name of the assigned user next to it. The API should be called only to return the needed information about each task (name, _id, assignedUserName). Clicking on a task should take us to the Task Details view.</li>
 	    	<li>Have tabs at the top to show "All", "Completed" or "Pending" tasks. By default it should show the Pending tasks. Changing the tab should result in an API call (no filtering on the front-end).</li>
 	    	<li>Have next and previous buttons. </li>
 	    	<li>Have a button to create a new task that takes you to Add Task view.</li> 
@@ -243,7 +245,7 @@ This part will be graded mainly on your ability to have the API running and the 
 ```
 + Look at [this stack overflow question](http://stackoverflow.com/questions/13937318/convert-angular-http-get-function-to-a-service) to understand how to write a service
 + Here is a [helpful beginner tutorial] for some of the technologies used in this MP.(http://adrianmejia.com/blog/2014/09/28/angularjs-tutorial-for-beginners-with-nodejs-expressjs-and-mongodb/)
-+ Apparently, Angular always makes a [OPTION request before a POST request](http://stackoverflow.com/questions/24656488/angularjs-how-to-disable-option-request) and so your API should respond to a OPTIONS request at the endpoints where POST is implemented. You should be able to do something as simple as the following (as we are setting the response headers when we are handling the CORS stuff):
++ Apparently, Angular always makes a [OPTIONS request before a POST request](http://stackoverflow.com/questions/24656488/angularjs-how-to-disable-option-request) and so your API should respond to a OPTIONS request at the endpoints where POST is implemented. You should be able to do something as simple as the following (as we are setting the response headers when we are handling the CORS stuff):
 
 ```javascript
 someRoute.options(function(req, res){
