--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -12,6 +12,8 @@ due: April 6, 11.59PM CST
 
 1. `filter` query string parameter has been renamed to `select` in part A.
 2. New field `assignedUser` added to Task schema.
+3. Pagination requirements for Part B have changed. No pagination required for User List.
+4. Number of Users and Tasks that need to be in the database have been lowered. Also, a script for populating the database will be provided.
 
 ###Overview
 
