--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -47,7 +47,7 @@ In addition, your implementation should support the following JSON encoded query
 | sort     | specify the order in which to sort each specified field  (1- ascending; -1 - descending)     |
 | select   | specify the set of fields to include or exclude in each document  (1 - include; 0 - exclude) |
 | skip     | specify the number of results to skip in the result set; useful for pagination               |
-| limit    | specify the number of results to return (default should be 100)                              |
+| limit    | specify the number of results to return (default should be 100 for tasks and unlimited for users)                    |
 
 Here are some example queries and what they would return:
 
@@ -132,7 +132,7 @@ Requirements:
 	    User List:
 	    <ul>
 	    	<li>List **all** user names <del>(20 at a time)</del>. The API should be called only to return the needed information about each user (user name and _id). Clicking on a user should take us to the User Details view.</li>
-	    	<li>Have next and previous buttons. </li>
+	    	<li><del>Have next and previous buttons. </del></li>
 	    	<li>Have a button to create a new user that takes you to Add User view. </li>
 	    	<li>Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons. Any change to the sorting inputs should result in an API call that gets the new data (we do not want you to sort or filter data in the front-end).</li>
 		</ul>
