added requirement for delete buttons in the user and task lists

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -135,6 +135,7 @@ Requirements:
 	    	<li><del>Have next and previous buttons. </del></li>
 	    	<li>Have a button to create a new user that takes you to Add User view. </li>
 	    	<li>Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons. Any change to the sorting inputs should result in an API call that gets the new data (we do not want you to sort or filter data in the front-end).</li>
+	    	<li>**Have a delete button next to each displayed user.**</li>
 		</ul>
 	    </li> 
 	    <li> 
@@ -145,6 +146,7 @@ Requirements:
 	    	<li>Have next and previous buttons. </li>
 	    	<li>Have a button to create a new task that takes you to Add Task view.</li> 
 	    	<li>Have a sort-by dropdown menu with appropriate options (name, username, dateCreated, deadline) and ascending/descending radio buttons. Any change to the sorting inputs should result in an API call that gets the new data (we do not want you to sort or filter data in the front-end).</li>
+	    	<li>**Have a delete button next to each displayed task.**</li>
 		</ul>
 	    </li>
 	  <li> 
