added requirement for delete buttons in the user and task lists

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -14,6 +14,7 @@ due: April 6, 11.59PM CST
 2. New field `assignedUser` added to Task schema.
 3. Pagination requirements for Part B have changed. No pagination required for User List.
 4. Number of Users and Tasks that need to be in the database have been lowered. Also, a script for populating the database will be provided.
+5. New requirement for delete buttons in User List and Task List.
 
 ###Overview
 
