--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -15,6 +15,7 @@ due: April 6, 11.59PM CST
 3. Pagination requirements for Part B have changed. No pagination required for User List.
 4. Number of Users and Tasks that need to be in the database have been lowered. Also, a script for populating the database will be provided.
 5. New requirement for delete buttons in User List and Task List.
+6. New query string parameter, **count**, added to spec.
 
 ###Overview
 
@@ -49,6 +50,7 @@ In addition, your implementation should support the following JSON encoded query
 | select   | specify the set of fields to include or exclude in each document  (1 - include; 0 - exclude) |
 | skip     | specify the number of results to skip in the result set; useful for pagination               |
 | limit    | specify the number of results to return (default should be 100 for tasks and unlimited for users)                    |
+| **count**    | **if set to true, return the count of documents that match the query (instead of the documents themselves)**                    |
 
 Here are some example queries and what they would return:
 
