dropped the need to have sorting for User List

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "MP 3.2: Creating and consuming a RESTful API"
+title: "MP 3.3: Creating and consuming a RESTful API"
 due: April 6, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
@@ -16,6 +16,7 @@ due: April 6, 11.59PM CST
 4. Number of Users and Tasks that need to be in the database have been lowered. Also, a script for populating the database will be provided.
 5. New requirement for delete buttons in User List and Task List.
 6. New query string parameter, **count**, added to spec.
+7. Dropped the requirement to have sorting and filtering for the User List.
 
 ###Overview
 
@@ -137,7 +138,7 @@ Requirements:
 	    	<li>List **all** user names <del>(20 at a time)</del>. The API should be called only to return the needed information about each user (user name and _id). Clicking on a user should take us to the User Details view.</li>
 	    	<li><del>Have next and previous buttons. </del></li>
 	    	<li>Have a button to create a new user that takes you to Add User view. </li>
-	    	<li>Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons. Any change to the sorting inputs should result in an API call that gets the new data (we do not want you to sort or filter data in the front-end).</li>
+	    	<li><del>Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons. Any change to the sorting inputs should result in an API call that gets the new data (we do not want you to sort or filter data in the front-end).</del></li>
 	    	<li>**Have a delete button next to each displayed user.**</li>
 		</ul>
 	    </li> 
