dropped the need to have edit for user on the front end

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -173,7 +173,7 @@ Requirements:
 	</li>
 	<li>Add User </li>
 	<li>Add Task</li>
-	<li>Edit User</li>
+	<li><del>Edit User</del></li>
 	<li>Edit Task	</li>
 	</ol>
 </li>
