more details fro add user and add task views

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -18,6 +18,7 @@ due: April 6, 11.59PM CST
 6. New query string parameter, **count**, added to spec.
 7. Dropped the requirement to have sorting and filtering for the User List.
 8. Dropped the requirement to have users be editable on the front end.
+9. More details added to Add User and Add task views.
 
 ###Overview
 
@@ -168,11 +169,11 @@ Requirements:
 	  <ul>
 	  	<li>Show details about the task (name, description, user assigned to etc.)</li>
 	  	<li>Have a edit task button that takes you to Edit Task view</li>
-	  	<li>Have a "mark as incomplete" button for completed tasks. When that is clicked an API call should be made to change the status. </li>
+	  	<li>Have a way to change the completion status of the tasks. When that is changed an API call should be made to change the status. </li>
 	</ul>
 	</li>
-	<li>Add User </li>
-	<li>Add Task</li>
+	<li>Add User: should have name and email fields </li>
+	<li>Add Task: should have name, description, deadline and a dropdown menu to choose an assigned user</li>
 	<li><del>Edit User</del></li>
 	<li>Edit Task	</li>
 	</ol>
