--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -19,6 +19,8 @@ due: April 6, 11.59PM CST
 7. Dropped the requirement to have sorting and filtering for the User List.
 8. Dropped the requirement to have users be editable on the front end.
 9. More details added to Add User and Add task views.
+10. Video released.
+11. Date picker recommendation added.
 
 ###Overview
 
@@ -192,7 +194,7 @@ Requirements:
 	</ol>
 </li>
 <li>
-	All your date entry fields should use a graphical date picker.
+	All your date entry fields should use a graphical date picker (wer recommend [this one](http://720kb.github.io/angular-datepicker/)).
 </li>
 </ol>
 
