Added final project details page.

--- a/_posts/2015-4-3-Final.md
+++ b/_posts/2015-4-3-Final.md
@@ -33,7 +33,14 @@ Details coming soon...
 
 ###Part C: Final Presentation
 
-Details coming soon...
+On the day of your final presentation (to be determined), your overall deliverables are:
+
++ Source Code for the Project / URL to GitHub Repository
++ URL to your hosted project
++ Approximately 5-minute video detailing your web app's purpose, design, and functionality
++ Your final powerpoint presentation
+
+More details coming soon...
 
 ###Grade Breakdown
 
