fixes to final project

--- a/_posts/2015-4-3-Final.md
+++ b/_posts/2015-4-3-Final.md
@@ -24,10 +24,14 @@ Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiu
 
 + Team Members (Names and NetIDs)
 + Problem Statement & Motivation
++ Solution Approach
 + Technologies used for front end & back end
 + Specific breakdown of what each team member is responsible for
 
 ###Part B: Prototype Presentation
+
+**Due Date: 4/19**
+**Presentations: 4/20 and 4/22 (in class)**
 
 Details coming soon...
 
@@ -38,7 +42,7 @@ On the day of your final presentation (to be determined), your overall deliverab
 + Source Code for the Project / URL to GitHub Repository
 + URL to your hosted project
 + Approximately 5-minute video detailing your web app's purpose, design, and functionality
-+ Your final powerpoint presentation
++ Your powerpoint deck
 
 More details coming soon...
 
