--- a/_posts/2015-4-3-Final.md
+++ b/_posts/2015-4-3-Final.md
@@ -20,6 +20,8 @@ Your goal is to **create a database-backed web application which utilizes a REST
 
 ###Part A: Proposal
 
+**Due - *April 10*, 2015, 11.59PM CST**
+
 Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiuc.web.programming@gmail.com) containing the following:
 
 + Team Members (Names and NetIDs)
@@ -30,13 +32,15 @@ Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiu
 
 ###Part B: Prototype Presentation
 
-**Due Date: 4/19**
+**Due Date: April 19, 2015, 11.59PM CST**
 
-**Presentations: 4/20 and 4/22 (in class)**
+**Presentations: April 20 and April 22 (in class)**
 
 Details coming soon...
 
 ###Part C: Final Presentation
+
+**Date - *May 11*, 2015, 8.00AM CST**
 
 On the day of your final presentation (to be determined), your overall deliverables are:
 
