fixes to final project

--- a/_posts/2015-4-3-Final.md
+++ b/_posts/2015-4-3-Final.md
@@ -40,7 +40,7 @@ Details coming soon...
 
 ###Part C: Final Presentation
 
-**Date - *May 11*, 2015, 8.00AM CST**
+**Due Date - *May 11*, 2015, 8.00AM CST**
 
 On the day of your final presentation (to be determined), your overall deliverables are:
 
