added submission details

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -268,4 +268,28 @@ someRoute.options(function(req, res){
 
 
 ###Submission Details
-Coming soon.
+You can find the MP3 Submission [here](http://uiucwp.com/mp3/submit)
+ 
+There are 3 parts for this MP submission. 
+1. (VERY IMPORTANT) Add **uiuc-web-programming** as a collaborator on your repository (instructions for [GitHub](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/) and [Bitbucket](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/))
+
++ Submit the [step 1 form](http://uiucwp.com/mp3/submit), wait for an email from the build system, and verify that your MP looks correct in our environment. You will be able to see your client live. You will not, however, be able to see your server live. We will run your server against a subset of tests from our test suite and provide you with the output of the server and the tests in the email as a sanity check. 
+
++ Complete and submit this **REQUIRED** [supplemental form](https://docs.google.com/forms/d/1OBFZLk_bpzlCUb3QKxdbUa5Zu8f573LvC1S3oVvS7Lc/viewform). You only need to submit this form once. So, if you decide to rebuild your website in order to fix any broken resources, you should not resubmit the supplemental form.
+ 
+For the client, it is crucial that you make sure that your site looks the *exact* same way you want your website to be graded. You should pay particular attention to *Rule 5 from the MP2 spec* for all your CSS, JavaScript, and asset references.
+ 
+Notes:
+1. Use the build system early. Realizing for the first time that you have an error 30 minutes before the deadline is beneficial to no one.
+
+2. Make full submissions. If after submitting you decide to change something in just your server, **make sure** you still submit all the links (client, server, and extra credit if applicable) in your next submission. Each submission is treated independently.
+
+3. Please don't make any changes to your backend directory structure. Your server should start up with node server.js and you should still have the following line in 
+
+```javascript
+var port = process.env.PORT || 4000; in server.js
+```
+ 
+If you run into any issues using the submission and build system, please post on Piazza.
+ 
+#pin
