added submission details

--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -268,10 +268,10 @@ someRoute.options(function(req, res){
 
 
 ###Submission Details
-You can find the MP3 Submission [here](http://uiucwp.com/mp3/submit)
+Here is the [MP3 Submission form](http://uiucwp.com/mp3/submit)
  
 There are 3 parts for this MP submission. 
-1. (VERY IMPORTANT) Add **uiuc-web-programming** as a collaborator on your repository (instructions for [GitHub](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/) and [Bitbucket](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/))
+1. (**VERY IMPORTANT**) Add **uiuc-web-programming** as a collaborator on your repository (instructions for [GitHub](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/) and [Bitbucket](https://help.github.com/articles/adding-collaborators-to-a-personal-repository/))
 
 + Submit the [step 1 form](http://uiucwp.com/mp3/submit), wait for an email from the build system, and verify that your MP looks correct in our environment. You will be able to see your client live. You will not, however, be able to see your server live. We will run your server against a subset of tests from our test suite and provide you with the output of the server and the tests in the email as a sanity check. 
 
@@ -291,5 +291,3 @@ var port = process.env.PORT || 4000; in server.js
 ```
  
 If you run into any issues using the submission and build system, please post on Piazza.
- 
-#pin
