--- a/_posts/2015-3-17-MP-3.md
+++ b/_posts/2015-3-17-MP-3.md
@@ -139,7 +139,7 @@ Requirements:
 	    <li>
 	    User List:
 	    <ul>
-	    	<li>List **all** user names <del>(20 at a time)</del>. The API should be called only to return the needed information about each user (user name and _id). Clicking on a user should take us to the User Details view.</li>
+	    	<li>List **all** user names <del>(20 at a time)</del>. The API should be called only to return the needed information about each user (user name and email). Clicking on a user should take us to the User Details view.</li>
 	    	<li><del>Have next and previous buttons. </del></li>
 	    	<li>Have a button to create a new user that takes you to Add User view. </li>
 	    	<li><del>Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons. Any change to the sorting inputs should result in an API call that gets the new data (we do not want you to sort or filter data in the front-end).</del></li>
