Fixed Makeup due date.

--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "MP 4.0 Task Managers from Outer Space!"
+title: "MP 4.0: Task Managers from Outer Space!"
 due: May 1, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-### Due Date - *April 10*, 2015, 11.59PM CST
+### Due Date - *May 1*, 2015, 11.59PM CST
 
 <span style="color: red">Attention:</span> This is a make-up programming assignment. If completed, your grade on this MP will replace your lowest existing MP grade. This assignment should not be considered extra credit and will not give you extra points on the midterm or the class overall.
 
@@ -85,6 +85,10 @@ These modals should be accessible through buttons in the User List and Task List
 You should have client side validation in both forms to ensure that:
 	+ Users cannot be created (or updated) without a name or email. Also check for the validity of the email provided. These fields should be marked with a red * to indicate that they are required and an error message should pop up when users don't comply.
 	+ Tasks cannot be created (or updated) without a name or a deadline. These fields should be marked with a red * to indicate that they are required and an error message should pop up when users don't comply.
+
+####Server
+
+You do still need to construct your own API server using Meteor.
 
 ###Submission Details
 
