Updated MP4 spec and pushed the deadline.

--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -1,14 +1,15 @@
 ---
 layout: default
 title: "MP 4.0: Task Managers from Outer Space!"
-due: May 1, 11.59PM CST
+due: May 7, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-### Due Date - *May 1*, 2015, 11.59PM CST
+### Due Date - *May 7*, 2015, 11.59PM CST
 
-<span style="color: red">Attention:</span> This is a make-up programming assignment. If completed, your grade on this MP will replace your lowest existing MP grade. This assignment should not be considered extra credit and will not give you extra points on the midterm or the class overall.
+<span style="color: red">Attention:</span> This is a make-up programming assignment. If completed, your grade on this MP will replace ~~your lowest~~ **an existing MP grade of your choice**. This assignment should not be considered extra credit and will not give you extra points on the midterm or the class overall.
 
-<span style="color: red">Attention:</span> **We will not be providing any starter code for this MP**. It is up to you to learn how to use this framework, organize your files, bundle them, ensure that a README is included, and that it is properly committed to a private repository (shared to **uiuc-web-programming**). Please ensure that your Meteor app builds and runs properly in your Vagrant/NodeJS development environment.
+<span style="color: red">Attention:</span> **We will not be providing any starter code for this MP**. It is up to you to learn how to use this framework, organize your files, bundle them, ensure that a README is included, and that it is properly committed to a private repository (shared to **uiuc-web-programming**). ~~Please ensure that your Meteor app builds and runs properly in your Vagrant/NodeJS development environment.~~ Because your final demonstration of your Meteor app
+will be on your own laptop, you are free to develop your Meteor app in either your local machine or virtual machine.
 
 ###Meteor
 
@@ -109,3 +110,6 @@ git push origin master
 
 You should now have an `mp4` folder in your source directory which has been pushed to your Github **mp4** repository.
 
+###Demo Details
+
+**You must RSVP for your Meteor app demo through this [Google form](https://docs.google.com/forms/d/13m31IQOM7_j5N5MNHPsO9Bg6BIU6Upj_WXTvRPrfaUQ/viewform)**. At a later time, you will be asked to select a time to demo your Meteor app on May 7, 2015 (Reading Day). Demos will be given at _a location TBD_ to a CS498RK course staff member. All of the requirements and functionality of MP3 and those listed above will be tested for on-the-spot.
