--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -1,10 +1,10 @@
 ---
 layout: default
 title: "MP 4.0: Task Managers from Outer Space!"
-due: May 7, 11.59PM CST
+due: May 7, Time TBD
 <!-- permalink: lab1.html -->
 ---
-### Due Date - *May 7*, 2015, 11.59PM CST
+### Due Date - *May 7*, 2015, Time TBD
 
 <span style="color: red">Attention:</span> This is a make-up programming assignment. If completed, your grade on this MP will replace ~~your lowest~~ **an existing MP grade of your choice**. This assignment should not be considered extra credit and will not give you extra points on the midterm or the class overall.
 
@@ -112,4 +112,7 @@ You should now have an `mp4` folder in your source directory which has been push
 
 ###Demo Details
 
-**You must RSVP for your Meteor app demo through this [Google form](https://docs.google.com/forms/d/13m31IQOM7_j5N5MNHPsO9Bg6BIU6Upj_WXTvRPrfaUQ/viewform)**. At a later time, you will be asked to select a time to demo your Meteor app on May 7, 2015 (Reading Day). Demos will be given at _a location TBD_ to a CS498RK course staff member. All of the requirements and functionality of MP3 and those listed above will be tested for on-the-spot.
++ **You must RSVP for your Meteor app demo through this [Google form](https://docs.google.com/forms/d/13m31IQOM7_j5N5MNHPsO9Bg6BIU6Upj_WXTvRPrfaUQ/viewform)**. 
++ You will then have an option to select a demo slot-time on May 7, 2015 (Reading Day).
++ Demos will be given at _a location TBD_ to a CS498RK course staff member. 
++ All of the requirements and functionality of MP3 and those listed above will be tested for on-the-spot.
