Fixed wording and time deadline.

--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -1,10 +1,10 @@
 ---
 layout: default
 title: "MP 4.0: Task Managers from Outer Space!"
-due: May 7, Time TBD
+due: May 6, Time 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-### Due Date - *May 7*, 2015, Time TBD
+### Due Date - *May 6*, 2015, 11.59PM CST
 
 <span style="color: red">Attention:</span> This is a make-up programming assignment. If completed, your grade on this MP will replace ~~your lowest~~ **an existing MP grade of your choice**. This assignment should not be considered extra credit and will not give you extra points on the midterm or the class overall.
 
