--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -66,7 +66,7 @@ Your goal is to **recreate the User-Task management system of MP 3 using the Met
 	+ Have a delete button next to each displayed task.
 + User Details:
 	+ Show details about the user (name, email).
-	+ Have a edit user button that takes you to Edit User view.
+	+ ~~Have a edit user button that takes you to Edit User view.~~
 	+ Show a list of pending tasks that the user has. 
 	+ There should be a way to mark each task as complete. As soon as a task is marked as complete, it should dissapear from that list. Also, clicking on a task should take us to the Task Details view.
 + Task Details: 
