Updated validation requirements to MP4.

--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -84,8 +84,10 @@ Your goal is to **recreate the User-Task management system of MP 3 using the Met
 These modals should be accessible through buttons in the User List and Task List, respectively. After succesfully adding a user/task, the modal should disappear and an automatically-updated user/task list should appear in real-time.
 
 You should have client side validation in both forms to ensure that:
-	+ Users cannot be created (or updated) without a name or email. Also check for the validity of the email provided. These fields should be marked with a red * to indicate that they are required and an error message should pop up when users don't comply.
-	+ Tasks cannot be created (or updated) without a name or a deadline. These fields should be marked with a red * to indicate that they are required and an error message should pop up when users don't comply.
++ Users cannot be created (or updated) without a name or email.
++ Duplicate users should not be allowed (check this by looking for duplicate emails).
++ Tasks cannot be created (or updated) without a name or a deadline. 
++ These form fields should be marked with a red * to indicate that they are required and an error message should pop up when users do not comply.
 
 ####Server
 
